<resources>
    <string name="app_name">iCareProVendor</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAz8aGEq_e6BdrSstS8LoapyI-3obyj20k</string>
    <string name="network_error">Network Error</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="ok">Ok</string>
    <string name="you_can_change_the_language_later_from_settings">You can change the language later from settings</string>
    <string name="select_language">Select Language</string>
    <string name="next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="by_joining_smart_car_services_you_agree_to_the_n_terms_conditions">By Joining Smart car services, you agree to the \n<b> Terms &amp; Conditions </b></string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="one_platform_for_all_your_car_service_needs">One platform for all your car service needs</string>
    <string name="welcome_to_smart_car_services">Welcome to Smart car services</string>
    <string name="skip">SKIP</string>
    <string name="email">Email</string>
    <string name="set_password">Set Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="submit">Submit</string>
    <string name="hide">HIDE</string>
    <string name="show">SHOW</string>
    <string name="name">Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="retype_password">Retype Password</string>
    <string name="empty_name">Name is empty</string>
    <string name="email_empty">Email is empty</string>
    <string name="phone_empty">Phone is empty</string>
    <string name="country_empty">Country is empty</string>
    <string name="password_length">Password should be greater than 5 characters</string>
    <string name="otp_length">OTP should be 5 characters</string>
    <string name="password_empty">Password is empty</string>
    <string name="mobno_empty">Mobile no is empty</string>
    <string name="confirm_password_empty">Confirm password is empty</string>
    <string name="confirm_password_length">Confirm password should be greater than 6 characters</string>
    <string name="explanation_multiple_request">We are requesting the permission as it is necessary for the app to perform it\'s functionality.\nPlease select \"Grant Permission\" to try again and \"Cancel \" to exit.</string>
    <string name="upload_a_valid_id_document">Upload a valid ID document.</string>
    <string name="a_lot_of_services_need_a_valid_document_of_yours_please_upload_atleast_one">A lot of services need a valid document of yours. Please upload atleast one.</string>
    <string name="document_can_be_a_driving_license_car_license_or_similar">Document can be a Driving License, Car License or similar</string>
    <string name="tap_to_upload_documents">Tap to Upload documents</string>
    <string name="login_succcess">Login successfully</string>
    <string name="otp_success">OTP sent successfully</string>
    <string name="doc_upload">User document uploaded successfully</string>
    <string name="please_upload_driving_license_and_either_of_passport_or_emirates_id">Please upload Driving License and either of Passport or Emirates ID.</string>
    <string name="driving_license">Driving License</string>
    <string name="passport">Passport</string>
    <string name="emirates_id">Emirates ID</string>
    <string name="complete_msg">Do you want to complete this consultation</string>
    <string name="location">Location</string>
    <string name="audi_q3">Audi Q3</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="popular_packages">Popular packages</string>
    <string name="insurance_amp_renewal"><![CDATA[Insurance & Renewal]]></string>
    <string name="major_service">Major Service</string>
    <string name="_350_aed">350 AED</string>
    <string name="most_popular">most popular</string>
    <string name="and_a_lot_more">and a lot more</string>
    <string name="_30_off">30% OFF</string>
    <string name="buy_now">Buy Now</string>
    <string name="_500_aed">500 AED</string>
    <string name="_1_service_added">1 service added</string>
    <string name="view_cart">View Cart</string>
    <string name="warranty_policy">Warranty Policy</string>
    <string name="we_provide_a_12_month_10_000_km_warranty_with_every_car_service_in_dubai">We provide a 12 month/10,000 KM warranty with every car service in Dubai.</string>
    <string name="know_more">Know more</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="select_image">Select Image</string>
    <string name="invalid_email">Invalid email pattern</string>
    <string name="upload_driving_license">Please upload your Driving License.</string>
    <string name="upload_emirates_or_passport">Please upload either Emirates ID or Passport.</string>
    <string name="upload_ids">Please upload your IDs first</string>
    <string name="collection_delivery"><![CDATA[Collection & Delivery]]></string>
    <string name="more">more</string>
    <string name="and">and</string>
    <string name="service_amp_maintenance"><![CDATA[Service & Maintenance]]></string>
    <string name="basic_service">Basic Service</string>
    <string name="mobile_number_length_validation">Mobile No should be between 9-11 digits</string>
    <string name="smart_car_services_benefits">Smart car services benefits</string>
    <string name="doorstep_pickup">Doorstep pickup</string>
    <string name="inclusions">Inclusions</string>
    <string name="exclusions">Exclusions</string>
    <string name="_2_hrs_duration">2 hrs duration</string>
    <string name="_3_months_warranty">3 months warranty</string>
    <string name="profile">Profile</string>
    <string name="riyad_mahrez">Riyad Mahrez</string>
    <string name="riyadmahrez_gmail_com">riyadmahrez@gmail.com</string>
    <string name="id_documents">ID Documents</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="axa_insurance">Axa Insurance</string>
    <string name="add_an_address">Add an address</string>
    <string name="home">Home</string>
    <string name="default1">(Default)</string>
    <string name="_2201_4th_floor_tabuk_st_dubai">2201, 4th floor, Tabuk , St, Dubai</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cart">Cart</string>
    <string name="services_added">Services added</string>
    <string name="any_instructions_for_service_center_write_here_and_we_ll_let_them_know">Any Instructions for service center? Write here and we’ll let them know…</string>
    <string name="apply_promocode">Apply Promocode</string>
    <string name="bill_total">Bill Total</string>
    <string name="_139_aed">139 AED</string>
    <string name="service_total">Service Total</string>
    <string name="total_payable_amount">Total payable amount</string>
    <string name="total">TOTAL</string>
    <string name="continue1">Continue</string>
    <string name="change">Change</string>
    <string name="select_preferred_date">Select Preferred Date</string>
    <string name="select_preferred_time_slot">Select Preferred Time Slot</string>
    <string name="today">TODAY</string>
    <string name="dec_11">Dec 11</string>
    <string name="_10_00_am">10:00 AM</string>
    <string name="checkout">Checkout</string>
    <string name="duration">duration</string>
    <string name="warranty">warranty</string>
    <string name="order_placed_successfully">Order Placed Successfully</string>
    <string name="pin_code">PIN CODE</string>
    <string name="e_g_160047">e.g 160047</string>
    <string name="city">City</string>
    <string name="e_g_dubai">e.g Dubai</string>
    <string name="address">Address</string>
    <string name="house_no_building_name">House no, Building Name</string>
    <string name="locality_town">Locality / Town</string>
    <string name="state_emirate">STATE/EMIRATE</string>
    <string name="e_g_uae">e.g UAE</string>
    <string name="area_street_name_sector">Area, Street Name, Sector</string>
    <string name="select_address_type">Select Address Type</string>
    <string name="office">Office</string>
    <string name="others">Others</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="edit_address">Edit address</string>
    <string name="empty_pincode">Pincode is Empty</string>
    <string name="address_empty">Address is Empty</string>
    <string name="city_empty">City is Empty</string>
    <string name="locality_empty">Locality is Empty</string>
    <string name="state_empty">State is Empty</string>
    <string name="country">Country</string>
    <string name="address_added">Address Added</string>
    <string name="address_updated">Address Updated</string>
    <string name="login_signup_first">Please login or sign up first to continue</string>
    <string name="my_cars">My Cars</string>
    <string name="add_car">Add Car</string>
    <string name="_2015">2015</string>
    <string name="uae">UAE</string>
    <string name="f_65022">F 65022</string>
    <string name="cylinders">Cylinders</string>
    <string name="_4_cylinders">4 cylinders</string>
    <string name="body_type">Body Type</string>
    <string name="suv">SUV</string>
    <string name="remove">REMOVE</string>
    <string name="add_your_car">Add your car</string>
    <string name="step_1_2">Step 1/2</string>
    <string name="step_2_2">Step 2/2</string>
    <string name="select_brand">Select Brand</string>
    <string name="search_a_brand">Search a brand</string>
    <string name="basic_details">Basic details</string>
    <string name="mention_basic_info_of_your_car">Mention basic info of your car</string>
    <string name="make">Make</string>
    <string name="bmw">BMW</string>
    <string name="model">Model</string>
    <string name="plate_code">Plate Code</string>
    <string name="year">Year</string>
    <string name="select_country">Select Country</string>
    <string name="select_model">Select Model</string>
    <string name="select_year">Select Year</string>
    <string name="select_cylinders">Select Cylinders</string>
    <string name="plate_number">Plate number</string>
    <string name="empty_plate_code">Plate code is empty</string>
    <string name="empty_plate_number">Plate number is empty</string>
    <string name="car_added_success">Car Added Successfully</string>
    <string name="select_body_type">Please select body type</string>
    <string name="car_removed_success">Car removed Successfully</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="start_date_of_insurance">Start Date of Insurance</string>
    <string name="concerned_person">Concerned Person</string>
    <string name="_27_yrs">27 yrs</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_your_personal_info">Update your personal info</string>
    <string name="change_password">Change password</string>
    <string name="keep_your_profile_secure">Keep your profile secure</string>
    <string name="push_notifications">Push notifications</string>
    <string name="language">Language</string>
    <string name="enter_otp">One Time Password</string>
    <string name="otp">OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="chat_request">Chat Request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="accept_request">Accept Request</string>
</resources>