<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.fragment.authentication.UploadDocumentFragment">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:src="@drawable/ic_back_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/circular_bold"
            android:text="@string/upload_a_valid_id_document"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="@+id/ivBack"
            app:layout_constraintTop_toBottomOf="@+id/ivBack" />

        <TextView
            android:id="@+id/tvSubHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/circular_book"
            android:text="@string/a_lot_of_services_need_a_valid_document_of_yours_please_upload_atleast_one"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivBack"
            app:layout_constraintTop_toBottomOf="@+id/tvHeader" />


        <TextView
            android:id="@+id/tvSubHeader1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/circular_book"
            android:text="@string/document_can_be_a_driving_license_car_license_or_similar"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivBack"
            app:layout_constraintTop_toBottomOf="@+id/tvSubHeader" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clUploadDoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivBack"
            app:layout_constraintTop_toBottomOf="@+id/tvSubHeader1">


            <ImageView
                android:id="@+id/ivUpload"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_120sdp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_upload"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/tvUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/tap_to_upload_documents"
                android:fontFamily="@font/circular_book"
                android:textSize="@dimen/_12sdp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_15sdp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/circular_medium"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>