<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.authentication.LoginFragment">
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:src="@drawable/ic_back_dark"
        app:layout_constraintBottom_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivLogo" />
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:src="@drawable/ic_logo_sm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_circular"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:fontFamily="@font/circular_bold"
        android:text="@string/enter_otp"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />
<LinearLayout
    android:layout_width="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/circular_bold"
        android:text="Didn't receive OTP yet? "
        android:textColor="@color/grey"
        android:textSize="@dimen/_11sdp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/circular_bold"
        android:text="@string/resend_otp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_11sdp"
        />
</LinearLayout>
    <View
        android:layout_width="@dimen/_80sdp"
        android:layout_height="2dp"
        app:layout_constraintStart_toStartOf="@+id/tvHeader"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"
        android:background="@color/golden"
        android:layout_marginTop="@dimen/_3sdp"
        />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etOtp"
            android:layout_width="0dp"
            android:background="@drawable/et_bg_blackstroke"
            android:paddingStart="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@+id/tvHeader"
            android:hint="@string/otp"
            android:maxLength="5"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:inputType="numberDecimal"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
             />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPassword"
        android:text="@string/set_password"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:fontFamily="@font/circular_bold"
        android:textSize="@dimen/_14sdp"

        />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/et_bg_blackstroke"
            android:paddingStart="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/black"
            android:gravity="start"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:hint="@string/set_password"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword"
            android:textCursorDrawable="@null"
            android:inputType="textPassword"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
             />

    <TextView
        android:id="@+id/tvShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show"
        app:layout_constraintTop_toTopOf="@+id/etPassword"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/etPassword"
        app:layout_constraintEnd_toEndOf="@id/etPassword"
        android:textSize="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_15sdp"


        />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_14sdp"
        android:id="@+id/tvForgotPassword"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_15sdp"
        android:text="@string/forgot_password"
        android:visibility="gone"
        android:fontFamily="@font/circular_medium"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_15sdp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/circular_medium"
        android:gravity="center"
        android:text="@string/verify_otp"
        android:layout_marginTop="@dimen/_30sdp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_4sdp"
        app:iconGravity="start"
        app:layout_constraintTop_toBottomOf="@+id/etOtp" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
