<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_14sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:fontFamily="@font/circular_medium"
            android:text="@string/app_name"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:fontFamily="@font/circular_book"
            android:minWidth="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="03:00 pm"
            android:textColor="@color/grey"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivRequestType"
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            app:tint="@color/green"
            app:layout_constraintBottom_toBottomOf="@+id/tvRequestType"
            app:layout_constraintEnd_toStartOf="@id/tvRequestType"
            app:layout_constraintTop_toTopOf="@+id/tvRequestType"
            app:srcCompat="@drawable/baseline_video_camera_back_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRequestType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/circular_medium"
            android:text="@string/chat_request"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:textColor="@color/green"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvName" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/circular_medium"
            android:paddingTop="@dimen/_3sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/cancel_request"
            android:textColor="@color/red"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvAccept" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAccept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="12dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/circular_medium"
            android:paddingTop="@dimen/_3sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/accept_request"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTime" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/circular_book"
            android:padding="@dimen/_1sdp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRequestType" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAccept" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>